$Id$

2008-12-31 Maarten ter Huurne <maarten@treewalker.org>
    * Released C-BIOS 0.23.

2008-12-30 Maarten ter Huurne <maarten@treewalker.org>
    * Have a single file (version.txt) that contains the version number.
    * Keep interrupt enabled during data transfer phase of FILVRM.
      Fixes startup problems of Penguin Adventure.
    * Initialize MSX1 VRAM mapping bit (bit7 of VDP R#1) to 1.
      Fixes title screen of Zaider - Battle of Peguss.

2008-12-30 Albert Beevendorp
    * Modified MSX1 logo data so it easier to insert the version number.
    * Added ret on address EXTROM on MSX1. Fixes Nemesis 3 reset.

2008-12-27 Maarten ter Huurne <maarten@treewalker.org>
    * Released C-BIOS 0.22.

2008-07-22 Maarten ter Huurne <maarten@treewalker.org>
    * Set lower bits of PSG reg 15 before reading joystick trigger status.
      If the lower bits are 0, the trigger status read will also be 0, no
      matter whether the trigger is pressed.
      Fixes MJTT in meisei; thanks to "enen" for reporting this.

2007-12-13 Arnold Metselaar  <arnold.metselaar@planet.nl>
    * logo.asm: Move org directive ...
    * logo_msx1.asm,logo_msx2.asmlogo_msx2+.asm: ... to here,
      helps the program 'make' pass the right options to GNU ld.

2007-11-19 Arnold Metselaar <arnold.metselaar@planet.nl>
    * video.asm (cls_text): move cursor (CSRY,CSRX) to top left corner.
    * chput.asm (chput_ctrl_ff,chput_esc_e,chput_esc_j): equate to cls;
      the updated cls ends with chput_ctrl_home now.

2007-02-03 Eric Boon <eric@auroramsx.nl>
    * Split off INLIN from main
    * Initial implementation of INLIN

2006-09-30 Arnold Metselaar  <arnold.metselaar@planet.nl>
    * Makefile: Remove the unnecessary workaround for tniasm, fix
      SEDSCR for z80-as.

2006-09-09 Arnold Metselaar  <arnold.metselaar@planet.nl>
    * src/main.asm, Makefile: Move version.asm from derived/src to derived/asm.
    * Makefile: Copy all source files to derived/asm if tniasm is used, because